--- a/src/components/Alert/alert.module.css
+++ b/src/components/Alert/alert.module.css
@@ -8,6 +8,7 @@
   text-align: center;
   border-radius: 20px;
   background-color: #e1e1e1ce;
+  z-index: 100000;
 }
 .message {
   font-size: 1.05rem;
