--- a/src/Pages/UserPanel/userPanel.module.css
+++ b/src/Pages/UserPanel/userPanel.module.css
@@ -5,6 +5,28 @@
 }
 
 .UserPanel__img {
-  width: 40px;
-  height: 40px;
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.UserPanel__controls {
+  padding: 4px;
+  font-size: 1.2rem;
+  background-color: rgb(224, 224, 224);
+  display: inline-flex;
+  align-items: center;
+  gap: 0px;
+  margin-bottom: 15px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.UserPanel__controls:hover {
+  background-color: rgb(247, 247, 247);
+}
+
+.UserPanel__button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
