--- a/src/components/Auth/auth.module.css
+++ b/src/components/Auth/auth.module.css
@@ -32,7 +32,7 @@
   width: 100%;
   box-sizing: border-box;
   border-radius: 5px;
-  background: linear-gradient(0deg , #003274 0%, #035FA2 100%);
+  background: linear-gradient(0deg, #003274 0%, #035fa2 100%);
   padding: 10px 25px;
   border: none;
   color: #fff;
@@ -49,12 +49,12 @@
 
 .button_type_tabLogin {
   border-radius: 5px 0 0 5px;
-  background: #035FA2;
+  background: #035fa2;
 }
 
 .button_type_tabReg {
   border-radius: 0 5px 5px 0;
-  background: #035FA2;
+  background: #035fa2;
 }
 
 .button_active {
