--- a/src/components/App/app.module.css
+++ b/src/components/App/app.module.css
@@ -1,7 +1,7 @@
 .app {
-  margin: 0 auto 60px auto;
+  margin: 100px auto 60px auto;
   max-width: 1440px;
-  box-shadow: 0px 10px 25px rgb(151, 151, 151);
+  box-shadow: 0 10px 25px rgb(151, 151, 151);
 
   position: relative;
 }
