--- a/src/components/ContentBlock/DocumentModal/documentModal.module.css
+++ b/src/components/ContentBlock/DocumentModal/documentModal.module.css
@@ -1,46 +1,48 @@
 .modal {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  position: fixed;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(236, 236, 236, 0.6);
-
-  z-index: 2000;
+  background-color: rgba(0, 31, 83, 0.089);
 }
 
 .modal__close {
-  cursor: pointer;
   position: absolute;
+  width: 2rem;
   top: 2rem;
   right: 2rem;
+  cursor: pointer;
 }
 .modal__close:hover {
   opacity: 0.7;
 }
 
 .modal__document {
+  display: flex;
+  max-width: 80%;
+  padding: 1.3rem;
   overflow: hidden;
+  border-radius: 15px;
+  background-color: rgba(248, 248, 248, 0.87);
 }
 
 .modal__document img {
-  overflow: hidden;
+  display: block;
   max-height: 80vh;
   max-width: 100vw;
-  object-fit: contain;
-  display: block;
   margin: 0 auto;
+  object-fit: contain;
+  overflow: hidden;
 }
 .documentInfo {
-
+  padding-left: 1.3rem;
 }
-
-@media (max-width: 650px) {
-  .modal__img img {
-    width: 80%;
-  }
+.info {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  row-gap: 5px;
+  border-radius: 10px;
+  background-color: white;
 }
