--- a/src/components/ContentBlock/AddUserModal/addUserModal.module.css
+++ b/src/components/ContentBlock/AddUserModal/addUserModal.module.css
@@ -21,8 +21,9 @@
   display: inline-flex;
   flex-direction: column;
   position: relative;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, 50px);
+  transform: translate(-50%, -50%);
   background-color: rgb(227, 225, 225);
   padding: 20px;
   border: 1px solid rgb(199, 199, 199);
