--- a/src/Pages/DocumentPanel/documentPanel.module.css
+++ b/src/Pages/DocumentPanel/documentPanel.module.css
@@ -3,3 +3,30 @@
   margin-top: 0;
   margin-left: 0.8rem;
 }
+
+.dataList__img {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.dataList__controls {
+  padding: 4px;
+  font-size: 1.2rem;
+  background-color: rgb(224, 224, 224);
+  display: inline-flex;
+  align-items: center;
+  gap: 0px;
+  margin-bottom: 15px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.dataList__controls:hover {
+  background-color: rgb(247, 247, 247);
+}
+
+.dataList__button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
