--- a/src/components/ContentBlock/CreateDocumentModal/createDocumentModal.module.css
+++ b/src/components/ContentBlock/CreateDocumentModal/createDocumentModal.module.css
@@ -1,6 +1,11 @@
 .modal__close {
+  border: none;
+  background-color: transparent;
   margin-left: auto;
   margin-bottom: 20px;
+  width: 20px;
+  height: 20px;
+  background-image: url(@/assets/cancel.svg);
 }
 
 .modal {
@@ -31,44 +36,74 @@
   margin-top: 10px;
 }
 
-.button:hover,
-.modal__close:hover {
-  cursor: pointer;
-  opacity: 0.8;
-}
-
 .form {
   display: flex;
   flex-direction: column;
   gap: 8px;
 }
 
+.listImage {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  gap: 10px;
+  overflow-y: hidden;
+  justify-content: start;
+}
+
+.listImage_scroll {
+  height: 250px;
+  overflow-y: scroll;
+}
+
+.itemImage {
+  width: 140px;
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: 5px;
+  position: relative;
+}
+
 .preview {
   width: 100%;
-  height: 100%;
+  height: 70%;
   object-fit: contain;
   object-position: center;
   align-self: center;
   border-radius: 10px;
 }
 
-.listImage {
+.previewText {
   margin: 0;
-  padding: 0;
-  list-style-type: none;
-  display: grid;
-  grid-template-columns: repeat(3, 140px);
-  gap: 10px;
-  width: 100%;
-  height: 100%;
-  overflow-y: hidden;
-  justify-content: center;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
-.listImage_scroll {
-  height: 200px;
-  overflow-y: scroll;
-  grid-template-rows: repeat(1, 100px);
+.deleteImage {
+  border: none;
+  background-color: rgb(255, 255, 255, 0.4);
+  background-position: center;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  background-image: url(@/assets/cancel.svg);
+  padding: 15px;
+  top: 0;
+  right: 0;
+}
+
+.button:hover,
+.modal__close:hover,
+.deleteImage:hover {
+  cursor: pointer;
+  opacity: 0.8;
 }
 
 @media (max-width: 650px) {
