logic delete + some styles

--- a/src/components/ContentBlock/DeleteDepartmentModal/deleteDepartmentModal.module.css
+++ b/src/components/ContentBlock/DeleteDepartmentModal/deleteDepartmentModal.module.css
@@ -39,3 +39,12 @@
 .button:disabled{
   background: gray;
 }
+
+.form{
+  display: block;
+}
+
+.checkboxInput{
+  float: right;
+  position: relative;
+}
