some styles for modal window

--- a/src/components/ContentBlock/DeleteDepartmentModal/deleteDepartmentModal.module.css
+++ b/src/components/ContentBlock/DeleteDepartmentModal/deleteDepartmentModal.module.css
@@ -47,4 +47,10 @@
 .checkboxInput{
   float: right;
   position: relative;
+  margin-left: 20px;
+  margin-right: auto;
+}
+
+.question{
+  margin: 10px;
 }
