--- a/src/components/ContentBlock/AddUserModal/addUserModal.module.css
+++ b/src/components/ContentBlock/AddUserModal/addUserModal.module.css
@@ -15,6 +15,7 @@
 .modal__close {
   margin-left: auto;
   margin-bottom: 20px;
+  width: 20px;
 }
 
 .modal {
@@ -24,7 +25,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgb(227, 225, 225);
+  background-color: white;
   padding: 20px;
   border: 1px solid rgb(199, 199, 199);
   border-radius: 5px;
