--- a/src/components/userInfoModal/userInfoModal.module.css
+++ b/src/components/userInfoModal/userInfoModal.module.css
@@ -22,6 +22,8 @@
   right: 5px;
   top: 5px;
   width: 20px;
+  cursor: pointer;
+  transition: opacity 0.3s;
 }
 
 .userInfo__avatar {
@@ -74,6 +76,12 @@
   padding: 5px 0 5px 5px;
   border: 2px solid #035fa2;
   border-radius: 5px;
+}
+
+.userInfo__button:hover,
+.userInfo__close:hover {
+  cursor: pointer;
+  opacity: 0.8;
 }
 
 @media (max-width: 650px) {
