--- a/src/components/ContentBlock/DocumentModal/documentModal.module.css
+++ b/src/components/ContentBlock/DocumentModal/documentModal.module.css
@@ -15,28 +15,54 @@
   cursor: pointer;
 }
 .modal__close:hover {
-  opacity: 0.7;
+  opacity: 0.8;
 }
 
 .modal__document {
   display: flex;
   max-width: 80%;
-  padding: 1.3rem;
+  padding: 0.8rem 1.3rem;
   overflow: hidden;
   border-radius: 15px;
   background-color: rgba(248, 248, 248, 0.87);
+}
+.document_header {
+  display: flex;
+  justify-content: space-between;
+
+}
+.fileName {
+  margin: 0.5rem 0 0 1rem;
+}
+.fileControler {
+  display: flex;
+  column-gap: 0.4rem;
+  margin: 0 1rem 0.4rem 0;
+}
+.fileControler button {
+  border-radius: 40%;
+  border: none;
+  height: 1.5rem;
+  width: 1.9rem;
+  cursor: pointer;
+
+  background-color: rgb(224, 224, 224);
+}
+.fileControler button:hover {
+  transition: 0.2s;
+  opacity: 0.7;
 }
 
 .modal__document img {
   display: block;
   max-height: 80vh;
-  max-width: 100vw;
+  max-width: 100%;
   margin: 0 auto;
   object-fit: contain;
   overflow: hidden;
 }
 .documentInfo {
-  padding-left: 1.3rem;
+  margin: 1.7rem 0 1.3rem 1.3rem;
 }
 .info {
   display: flex;
@@ -45,4 +71,23 @@
   row-gap: 5px;
   border-radius: 10px;
   background-color: white;
+}
+.imageContainer {
+  text-align: center;
+}
+.dotContainer {
+  text-align: center;
+  padding-top: 0.2rem;
+}
+.dot {
+  display: inline-block;
+  width: 0.6rem;
+  height: 0.6rem;
+  background-color: rgb(206, 206, 206);
+  border-radius: 50%;
+  margin: 0 0.2rem;
+  cursor: pointer;
+}
+.dot.active {
+  background-color: rgb(145, 145, 145);
 }
