--- a/src/Pages/UserPanel/userPanel.module.css
+++ b/src/Pages/UserPanel/userPanel.module.css
@@ -14,6 +14,7 @@
   display: flex;
   height: fit-content;
   background-color: rgb(224, 224, 224);
+  transition: all 0.2s ease;
 }
 
 .UserPanel__controls {
@@ -24,12 +25,11 @@
   gap: 10px;
   margin-bottom: 15px;
   cursor: pointer;
-  transition: all 0.3s ease;
   text-align: center;
 }
 
 .UserPanel__control:hover {
-  background-color: rgb(247, 247, 247);
+  opacity: 0.75;
 }
 
 .UserPanel__button {
