--- a/src/components/ContentBlock/DocumentModal/documentModal.module.css
+++ b/src/components/ContentBlock/DocumentModal/documentModal.module.css
@@ -91,3 +91,31 @@
 .dot.active {
   background-color: rgb(145, 145, 145);
 }
+
+.dataList__img {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.dataList__controls {
+  margin-top: 2rem;
+  padding: 4px;
+  font-size: 1.2rem;
+  background-color: rgb(224, 224, 224);
+  display: inline-flex;
+  align-items: center;
+  gap: 0px;
+  margin-bottom: 15px;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+.dataList__controls:hover {
+  opacity: 0.75;
+}
+
+.dataList__button {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
