--- a/src/components/errorPage/PageNotFound.module.css
+++ b/src/components/errorPage/PageNotFound.module.css
@@ -1,33 +1,39 @@
-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-    text-align: center;
-    font-family: Arial, sans-serif;
-}
-
 .container {
-    max-width: 425px;
+    max-width: 500px;
+    text-align: center;
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
-h1 {
+.container h1 {
     color: #333;
-    font-size: 25px;
+    font-size: 28px;
+}
+
+.container p {
+    font-size: 17px;
+    line-height: 1.3;
 }
 
 .button {
     display: inline-block;
-    padding: 10px 20px;
+    padding: 0.7rem 1.3rem;
+    font-size: 16px;
+    margin-top: 0.5rem;
+
     background-color: #3498db;
     color: #fff;
     text-decoration: none;
     border-radius: 5px;
-    font-size: 16px;
-    margin-top: 20px;
+    transition: 0.2s;
 }
 
 .button:hover {
+    opacity: 0.9;
+}
+.button:active {
     background-color: #2980b9;
 }
