'department id' add to structure userPages state

--- a/src/components/Table/Pagination/Pagination.module.css
+++ b/src/components/Table/Pagination/Pagination.module.css
@@ -1,11 +1,12 @@
 .pagination {
   display: flex;
-  column-gap: 0.5rem;
+  column-gap: 0.4rem;
   margin-top: 2rem;
 }
 .pagination_item {
   padding: 0.5rem;
   font-size: 18px;
+  border-radius: 4px;
   color: rgb(87, 87, 87);
   background-color: rgb(224, 224, 224);
   transition: 0.2s;
