--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,6 +11,12 @@ body {
   padding-bottom: 10px;
 }
 
+.react-pdf__Page__canvas {
+  margin: 0 auto;
+  width: 100% !important;
+  height: 100% !important;
+}
+
 @media (max-width: 1000px) {
   *,
   button {
